--- a/vignettes/nettest.Rmd
+++ b/vignettes/nettest.Rmd
@@ -16,50 +16,69 @@ knitr::opts_chunk$set(
 )
 ```
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+## Generate network dependence
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+We provide two data generative process for generating network dependent outcomes--network dependence due to (1) direct transmission and (2) latent variable dependence.
 
-## Vignette Info
+Under direct transmission, `peer.process` provides time-evolving outcomes where $Y^{t}_{i}$ depends on $\{ Y^{t}_{j} : j \mbox{ is an adjacent peers of } i \}$. 
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r, message = FALSE, warning = FALSE}
+library(knitr)
+library(netdep)
+library(MASS)
+library(mvrtn)
+library(igraph)
+library(igraphdata)
+# generate network
+G = latent.netdep(n.node = 200, rho = 0.2, dep.factor = -1)
+A = as.matrix(get.adjacency(G))
+outcomes = peer.process(A, max.time = 3, mprob = 0.6, epsilon = 0.1)
+names(outcomes)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r}
+result0 = make.permute.moran(A, outcomes$time0, np = 500)
+result1 = make.permute.moran(A, outcomes$time1, np = 500)
+result2 = make.permute.moran(A, outcomes$time2, np = 500)
+result3 = make.permute.moran(A, outcomes$time3, np = 500)
 ```
 
-Also a quote using `>`:
+```{r}
+kable(cbind( c("t=0", "t=1", "t=2", "t=3"),
+  round(c(result0$moran, result1$moran, result2$moran, result3$moran),2),
+  round(c(result0$pval.permute, result1$pval.permute, result2$pval.permute, result3$pval.permute),2)), row.names = NA, col.names = c("Transmission time", "Moran's I", "P-value (permutation)"), 
+      caption = "Direct transmission")
+```
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+Note from the above table that as `t` increases, Moran's $I$ statistic increases and p-value decreases. 
+
+Next we generate network dependent continuous outcomes via (2) latent variable dependence, and then transform those into categorical outcomes, where $\Phi$ statistic can be applicable to test network dependence.
+
+
+
+## Real Data
+
+```{r}
+library(igraphdata)
+data(karate)
+A = as.matrix(as_adjacency_matrix(karate, attr= "weight", sparse = T)) # weighted adjacency matrix
+Y = V(karate)$Faction
+result = make.permute.moran(A, Y, np = 500)
+print(result$moran)
+print(result$pval.permute)
+```
+
+
+```{r}
+data(UKfaculty)
+A = as.matrix(as_adjacency_matrix(UKfaculty, attr= "weight", sparse = T)) # weighted adjacency matrix
+Y = V(UKfaculty)$Group
+table(Y)
+result = make.permute.Phi(A, Y, np = 500)
+print(result$phi)
+print(result$pval.permute)
+```
+
+
+More details on the method and applications can be found in [Arxiv paper](https://arxiv.org/pdf/1710.03296.pdf).
