--- a/vignettes/nettest.Rmd
+++ b/vignettes/nettest.Rmd
@@ -4,7 +4,7 @@ author: "Youjin Lee"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{netdep}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
